<resources>
    <string name="app_name">Login Page</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="country">Country</string>
    <string name="create_account">Create Account</string>
    <string name="read_pty_fasthelp_membersip_agreement">Read PTY FastHelp Membersip Agreement</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
</resources>