<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_" />

    <EditText
        android:id="@+id/txt_first_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/_104608081548233620_512"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColorHint="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/txt_last_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/_104608081548233620_512"
        android:gravity="center"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_first_login"
        tools:ignore="RtlCompat"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_pass_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/lock_icon_148524"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_last_login"
        tools:ignore="RtlCompat"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_phone_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/d2fbe10eac4b4ef6a2340e50a2c6810f"
        android:gravity="center"
        android:hint="@string/cell_phone"
        android:inputType="number"
        android:textAlignment="textStart"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pass_login"
        tools:ignore="RtlCompat,TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_country_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/_23_3232548_free_icons_png_building_icon_transparent_background"
        android:gravity="center"
        android:hint="@string/country"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone_login"
        tools:ignore="RtlCompat"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_agree_login"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="130dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/create_account"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_country_login"
        app:rippleColor="#FFFFFF"
        app:strokeColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/read_pty_fasthelp_membersip_agreement"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_country_login" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="285dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="166dp"
        android:layout_height="22dp"
        android:layout_marginBottom="12dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:text="Register"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>